--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,21 +1,11 @@
-include mixins/message
-
 doctype html
 html(lang="ko")
     head
-        title #{pageTitle} | #{siteName}
-        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
-        link(rel="stylesheet", href="/static/css/styles.css")
+        title #{pageTitle} | Wetube
+        link(rel="stylesheet" href="https://unpkg.com/mvp.css")
     body
-        if messages.error
-            +message("error", messages.error)
-        if messages.info
-            +message("info", messages.info)
-        if messages.success
-            +message("sucess", messages.success)
-        include partials/header                
+        header
+            h1=pageTitle
         main
             block content
-        include partials/footer
-    script(src="/static/js/main.js") 
-    block scripts
+    include partials/footer.pug
